entity_macros/tests/ui/attribute/simple_ent/conflicting-field-named-created.stderr
error[E0124]: field `created` is already declared
 --> $DIR/conflicting-field-named-created.rs:3:1
  |
3 | #[simple_ent]
  | ^^^^^^^^^^^^^ field already declared
...
7 |     created: usize,
  |     -------------- `created` first declared here
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0124]: field `created` is already declared
 --> $DIR/conflicting-field-named-created.rs:3:1
  |
3 | #[simple_ent]
  | ^^^^^^^^^^^^^
  | |
  | field already declared
  | `created` first declared here
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0201]: duplicate definitions with name `created`:
 --> $DIR/conflicting-field-named-created.rs:3:1
  |
3 | #[simple_ent]
  | ^^^^^^^^^^^^^
  | |
  | previous definition of `created` here
  | duplicate definition
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0201]: duplicate definitions with name `where_created`:
 --> $DIR/conflicting-field-named-created.rs:3:1
  |
3 | #[simple_ent]
  | ^^^^^^^^^^^^^
  | |
  | previous definition of `where_created` here
  | duplicate definition
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
